# atividade_teste

./: CMakeLists.txt  README.md
include/: calculadora.h
src/: calculadora.cpp  main.cpp
tests/: calculadora_test.cpp
